--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,8 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "json-server --watch db.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node node_modules/json-server/lib/cli/bin.js --watch db.json --host 0.0.0.0 --port 10000"
   },
   "dependencies": {
     "cors": "^2.8.5",
